[package]
edition = "2021"
name = "dungeon-crawler"
version = "0.0.1"

[dependencies]
colored = "2.0.0"
rand = "0.8.5"

[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
version = "1.2.2"
